fix deal page title being cutoff in mobile view

--- a/public/sass/components/_dealPageContent.scss
+++ b/public/sass/components/_dealPageContent.scss
@@ -107,11 +107,6 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     width: 88%;
-
-    @include respond(phone) {
-      -webkit-line-clamp: 1;
-    }
-
     color: $heading-color;
   }
   &_price {
